Website CSS Overhaul

--- a/experience.html
+++ b/experience.html
@@ -39,192 +39,78 @@
 	<h1 class="pageTitle"> Work Experience </h1>
 	
 	<!-- Niagara Supply Chain Experience Section -->
-	<h2 class="sectionTitle"> RPA Developer Intern: Niagara Bottling </h2>
-	<h3 class="dateLabel"> October 2020 - Present </h3>
-	
-	<div id="divAltColor" class="grid-container">
-		<img src="NiagaraInternship_2020_Images/AutomationAnywhere.jpg" alt="[ Missing Image ]">
-		<p>
-			Currently, I am a Robotic Process Automation (RPA) Developer intern for the continuous improvement team within the supply chain department at Niagara Bottling, LLC. 
-			By leveraging Automation Anywhere and Excel VBA I am able to remove tedious and manually intensive tasks from the workflow of supply chain team members at the company,
-			automating processes ranging from scheduling 40+ purchase orders a day to automating the end-to-end process of requesting business reports from the company server.
-			<br><br>
-			Within this role I was able to utilize my project management abilities to complete automation bots requested by department team members by owning the process from 
-			beginning to end; this includes gathering bot requirements, developing the bot and accompanying Excel macros, testing, deployment, and documentation. Additionally,
-			I am responsible for performing routine maintenance on bots I have deployed in order to ensure proper operation during run-time.
-			<br><br>
-			In total, I have fully developed 6 bots that save the department approximately 4 hours of a team member's labor per day.
-		</p>
+	<div id="divStyle2">
+		<h2 class="sectionTitle"> RPA Developer Intern: Niagara Bottling </h2>
+		
+		<div id="divAltColor" class="grid-container">
+			<img src="NiagaraInternship_2020_Images/AutomationAnywhere.jpg" alt="[ Missing Image ]">
+			<p>
+				Currently, I am a Robotic Process Automation (RPA) Developer intern for the continuous improvement team within the supply chain department at Niagara Bottling, LLC. 
+				By leveraging Automation Anywhere and Excel VBA I am able to remove tedious and manually intensive tasks from the workflow of supply chain team members at the company,
+				automating processes ranging from scheduling 40+ purchase orders a day to automating the end-to-end process of requesting business reports from the company server.
+				<br><br>
+				Within this role I was able to utilize my project management abilities to complete automation bots requested by department team members by owning the process from 
+				beginning to end; this includes gathering bot requirements, developing the bot and accompanying Excel macros, testing, deployment, and documentation. Additionally,
+				I am responsible for performing routine maintenance on bots I have deployed in order to ensure proper operation during run-time.
+				<br><br>
+				In total, I have fully developed 6 bots that save the department approximately 4 hours of a team member's labor per day.
+			</p>
+		</div>
 	</div>
 	
 	<!-- Niagara Systems Engineering Experience Section -->
-	<h2 class="sectionTitle"> Systems Engineering Intern: Niagara Bottling </h2>
-	<h3 class="dateLabel"> May 2020 - October 2020 </h3>
-	
-	<p>
-		At Niagara Bottling I served as a Systems Engineering intern for the Digitalization team within Niagara Bottling, LLC. The main purpose of this role
-		is to utilize the Ignition Supervisory Control And Data Acquisition (SCADA) platform to visualize data collected from PLCs within the
-		plants throughout the company and create high performance, responsive Human Machine Interfaces (HMIs) to aid various departments within
-		the company.
-		During this past summer, I was given 2 primary projects to work on along with many day-to-day tasks. My primary projects include:
-		<br><br>
-		<strong> Gateway Automation User Interface (UI) </strong>: <br>
-		In order to setup the Ignition Gateways within the company members of the Systems Engineering department previously had 2 options; they
-		would either set up the Gateways from scratch or they would use a backup from another plant server and modify the file as needed. Using 
-		either method takes large amounts of time to complete that could be spent on tasks that would add more value to the company while also 
-		creating an inconsistent setup from Gateway to Gateway. This project consisted of creating a process to standardize the Gateway setup 
-		while automating tedious portions of the project that do not need human input.
-		<br><br>
-		<strong> User Management User Interface (UI) </strong>: <br>
-		In order to give members from other departments access to the utility applications created within our department a Digitalization Systems 
-		Engineering team member must manually add them to the Ignition system. This process both takes time for the Systems Engineering team member
-		to complete while also delaying outside team members from accessing projects when necessary. By creating a responsive User Management UI that
-		could be sent to team managers, our team was able to offload the task of managing access to the appropriate teams, which reduced the amount of
-		wait time for project access as well as the redundancy that comes with adding users through the Systems Engineering department. Since this 
-		project deals with managing user access I implemented a multi-tier access control level system to ensure users have the appropriate amount of 
-		privileges when using the UI.
-	</p>
-
-	<span id="project1">
-	
-	<br><hr><br> <!-- Line Break -->
-
-	<div id="divAltColor" class="grid-container">
-		<img src="NiagaraInternship_2020_Images/YellowBelt.jpg" alt="[ Missing Image ]">
+	<div id="divStyle1">
+		<h2 class="sectionTitle"> Systems Engineering Intern: Niagara Bottling </h2>
+		
 		<p>
-			Outside of my projects I have had the opportunity to learn and apply continuous improvement strategies during both years of my internship with 
-			Niagara.
-			<br><br>
-			My previous year as an intern at Niagara I was able to acquire my Lean Six Sigma Yellow Belt by completing the training courses provided by the 
-			company. Using the knowledge I acquired from this training, I kept streamlining and optimization in mind when designing solutions for my projects.
-			The Gateway Automation and User Management UI have both been creating to improve on the process of working with Ignition within Niagara by saving 
-			time that would go into tedious tasks. In particular, letting team managers control the access level of their employees within Ignition will 
-			significantly improve the workflow of Ignition-reliant teams within the company.
+			At Niagara Bottling I served as a Systems Engineering intern for the Digitalization team within Niagara Bottling, LLC. The main purpose of this role
+			is to utilize the Ignition Supervisory Control And Data Acquisition (SCADA) platform to visualize data collected from PLCs within the
+			plants throughout the company and create high performance, responsive Human Machine Interfaces (HMIs) to aid various departments within
+			the company.
+			During this past summer, I was given 2 primary projects to work on along with many day-to-day tasks. My primary projects include a User Interface (UI) to automate 
+			the setup of Ignition Gateways as well as a User Management UI to manage accounts linked to the gateway remotely.
 		</p>
+
+		<div id="divAltColor" class="grid-container">
+			<img src="NiagaraInternship_2020_Images/YellowBelt.jpg" alt="[ Missing Image ]">
+			<p>
+				Outside of my projects I have had the opportunity to learn and apply continuous improvement strategies during both years of my internship with 
+				Niagara.
+				<br><br>
+				My previous year as an intern at Niagara I was able to acquire my Lean Six Sigma Yellow Belt by completing the training courses provided by the 
+				company. Using the knowledge I acquired from this training, I kept streamlining and optimization in mind when designing solutions for my projects.
+				The Gateway Automation and User Management UI have both been creating to improve on the process of working with Ignition within Niagara by saving 
+				time that would go into tedious tasks. In particular, letting team managers control the access level of their employees within Ignition will 
+				significantly improve the workflow of Ignition-reliant teams within the company.
+			</p>
+		</div>
 	</div>
-	
-	</span>
-	<label style="font-size:24px;margin-left:4%" onclick="expandProject1()" id="expandProj1">(Read more)</label>
-	<br><br>
 	
 	<!-- Niagara IT Experience Section -->
-	<h2 class="sectionTitle"> Warehouse Management Systems Intern: Niagara Bottling </h2>
-	<h3 class="dateLabel"> June 2019 - August 2019 </h3>
-	
-	<p>
-		During the summer of 2019 I had the opportunity of interning at Niagara Bottling as a member of the Warehouse Management Systems (WMS) team
-		within the IT department. The purpose of this team is to create and maintain the technology used in the bottling plants and	warehouses within
-		the company. During the summer, interns at Niagara are given a primary project to complete along with other secondary projects that are done
-		alongside the main project. In my case, my main project for the summer was to create a low-cost proof of concept self checkout system for truck
-		drivers exiting the plant.
-		<br><br>
-		The way the current exit system is designed opens the warehouse exit gate automatically based on a proximity sensor, which lets trucks leave the
-		company site without being accounted for. This, in turn, created a lot of logistic issues because more often than not truck drivers leave the
-		facility without picking up their paperwork. To overcome these issues, my team and I created a system where a self checkout system would scan a
-		QR code that is present on the paperwork the truck driver must pick up before leaving in order to open the gate, which ensures the truck driver
-		leaves with all of their paperwork. The QR code on the paper will be generated at check in for a specific driver with a unique value, which will
-		be sent a JSON payload using the REST API that will be used by the company to account for exiting truck drivers.
-	</p>
-	
-	<p>	
-		When creating the interface a lot of design constraints had to be accounted for. Since the project would be used on a screen with unknown dimensions it was important
-		to create a responsive user interface that scales and adjusts to varying screens. GTK+-3.0 provides support for responsive design, and as a result the interface was configured
-		to scale appropriately whether it was on a large monitor or a 7 inch Windows tablet. Another important consideration was making sure the interface is intuitve and easy to use 
-		since truck drivers would be using the application at a relatively far distance. To solve this issue, the interface was designed with two large buttons with prominent icons that
-		trigger the program functions and direct prompt that can be read quickly. Finally, an administrator section was added to allow an operator to configure the system for each plant 
-		dynamically. Images of the interface are included below:
-	</p>
-	
-	<div id="divAltColor" class="grid-container">
-		<img src="NiagaraInternship_2019_Images/SelfCheckout_Homepage.png" alt="Homepage" style="width:100%;height:auto;">
-		<img src="NiagaraInternship_2019_Images/SelfCheckout_AdminPage.png" alt="Administrator Page" style="width:100%;height:auto;">
+	<div id="divStyle2">
+		<h2 class="sectionTitle"> Warehouse Management Systems Intern: Niagara Bottling </h2>
+		
+		<p>
+			During the summer of 2019 I had the opportunity of interning at Niagara Bottling as a member of the Warehouse Management Systems (WMS) team
+			within the IT department. The purpose of this team is to create and maintain the technology used in the bottling plants and	warehouses within
+			the company. During the summer, interns at Niagara are given a primary project to complete along with other secondary projects that are done
+			alongside the main project. In my case, my main project for the summer was to create a low-cost proof of concept self checkout system for truck
+			drivers exiting the plant.
+			<br><br>
+			The way the current exit system is designed opens the warehouse exit gate automatically based on a proximity sensor, which lets trucks leave the
+			company site without being accounted for. This, in turn, created a lot of logistic issues because more often than not truck drivers leave the
+			facility without picking up their paperwork. To overcome these issues, my team and I created a system where a self checkout system would scan a
+			QR code that is present on the paperwork the truck driver must pick up before leaving in order to open the gate, which ensures the truck driver
+			leaves with all of their paperwork. The QR code on the paper will be generated at check in for a specific driver with a unique value, which will
+			be sent a JSON payload using the REST API that will be used by the company to account for exiting truck drivers. The resulting prototyped interface
+			is pictured below.
+		</p>
+		
+		<div id="divAltColor" class="grid-container">
+			<img src="NiagaraInternship_2019_Images/SelfCheckout_Homepage.png" alt="Homepage" style="width:100%;height:auto;">
+			<img src="NiagaraInternship_2019_Images/SelfCheckout_AdminPage.png" alt="Administrator Page" style="width:100%;height:auto;">
+		</div>
 	</div>
-
-	<span id="project2">
-
-	<p>
-		To keep costs low for our proof of concept, I elected to use a generic USB web-camera present within the company to scan the QR code and a
-		<strong>Raspberry Pi</strong> as the central embedded system for the system, which cost less than $50 total. To ensure no unnecessary fees were incurred for
-		this proof of concept, all the software features that were not programmed in-house were implemented using open source external libraries, which
-		allowed us to develop the software for the system without having to pay extra fees.
-		<br><br>
-		<u>The software libraries used for this project include:</u>
-		<br><br>
-		<strong> OpenCV (C++) </strong>: <br>
-		Computer Vision was utilized to allow an ordinary webcam to read and parse the QR code image that is captured by the program. Using this library
-		along with generic camera hardware reduced the cost that comes with specialty equipment while allowing the application to utilize the internal
-		webcam present in the ruggedized Windows tablet that would be used as the end product.
-		<br><br>
-		<strong> GTK+-3.0 (C/C++) </strong>: <br>
-		This library was used to create a UI for the proejct using C/C++, which was needed since the computer vision code was written in C++. This library
-		allowed the entire codebase to be written in C++, which greatly improved the performance of the system.
-		<br><br>
-		<strong> JSON-C / cURL (C++) </strong>: <br>
-		These libraries were necessary to allow the application to communicate with the company server using REST API. Since C++ has no native protocols 
-		to send JSON messages these libraries were required to implement a system to send information from the application to an external destination
-		over the network.
-	</p>
-	
-	<br><br><hr><br> <!-- Line Break -->
-	
-	<p>
-		In addition to this project, I worked with my team to update Integ JNIOR (Java Network Input Output Resource) automation controllers to send a signal when a new pallet of water
-		should be created. The system would communicate using the Modbus TCP/IP protocol to send information from the controller to a specified address. Updating the JNIORS in-house
-		eliminated the time delay of requesting an update from the company while also reducing the cost of updating the software using an outside resource. 
-	</p>
-	
-	</span>
-	<label style="font-size:24px;margin-left:4%" onclick="expandProject2()" id="expandProj2">(Read more)</label>
-	<br><br>
-	
-	<!-- Javascript Functions --->
-	<script>
-		function expandProject1() 
-		{
-			var projOneText = document.getElementById("project1");
-			var projOneExpandText = document.getElementById("expandProj1");
-
-			if (projOneExpandText.innerHTML === "(Read less)") {
-				projOneExpandText.innerHTML = "(Read more)"; 
-				projOneText.style.display = "none";
-			} 
-			else {
-				projOneExpandText.innerHTML = "(Read less)"; 
-				projOneText.style.display = "inline";
-			}
-		}
-		
-		function expandProject2() 
-		{
-			var projTwoText = document.getElementById("project2");
-			var projTwoExpandText = document.getElementById("expandProj2");
-			
-			if (projTwoExpandText.innerHTML === "(Read less)") {
-				projTwoExpandText.innerHTML = "(Read more)"; 
-				projTwoText.style.display = "none";
-			} 
-			else {
-				projTwoExpandText.innerHTML = "(Read less)"; 
-				projTwoText.style.display = "inline";
-			}
-		}
-		
-		function expandProject3() 
-		{
-			var projThreeText = document.getElementById("project3");
-			var projThreeExpandText = document.getElementById("expandProj3");
-			
-			if (projThreeExpandText.innerHTML === "(Read less)") {
-				projThreeExpandText.innerHTML = "(Read more)"; 
-				projThreeText.style.display = "none";
-			} 
-			else {
-				projThreeExpandText.innerHTML = "(Read less)"; 
-				projThreeText.style.display = "inline";
-			}
-		}
-	</script>
-	
 </body>
 
 </html>
