--- a/index.html
+++ b/index.html
@@ -37,70 +37,61 @@
 	
 	<!-- Title -->
 	<h1 class="pageTitle"> Home </h1>
-	<div class="grid-container" id="banner">
-		<p id="bannerTitle"> Omar Naffaa </p>
-		<p id="bannerContact">
-			<a href="mailto:omarnaffaa.on@gmail.com" class="gridBtnItem" target="blank"><i class="far fa-envelope"> &nbsp; Email </i></a>
-			<br><br>
-			<a href="https://github.com/OmarNaffaa" class="gridBtnItem"><i class="fab fa-github-square"> &nbsp; Full Portfolio </i></a>
-			<br><br>
-			<a href="https://www.linkedin.com/in/omnaffaa/" class="gridBtnItem"><i class="fab fa-linkedin"> &nbsp; LinkedIn </i></a>
-		</p>
+	<div id="divStyle1">
+		<div class="grid-container">
+			<img id="headshotImage" src="MiscImages\avatar.jpg" alt="[ Missing Image ]">
+			<p id="bannerTitle" style="color:#FFFFFF">
+				Experienced engineer with a demonstrated history of working on embedded systems and automation through 
+				academic research and industry experience. Skilled in C++, C#, Python, Internet of Things, and Java-based
+				Android app development. Currently, I automate processes for team members within the supply chain department 
+				at Niagara Bottling, LLC using Automation Anywhere and Excel VBA.
+			</p>
+		</div>
 	</div>
-	
-	<!-- About Me -->
-	<h2 class="sectionTitle"> About Me </h2>
-	<p>
-		Experienced engineer with a demonstrated history of working on embedded systems and automation through 
-		academic research and industry experience. Skilled in C++, C#, Python, Internet of Things, and Java-based
-		Android app development. Currently, I create responsive HMI user interfaces using the Ignition SCADA platform at
-		Niagara Bottling, LLC.
-	</p>
 	
 	<!-- Featured Projects -->
-	<h2 class="sectionTitle"> Featured Projects </h2>
-	<div class="grid-container" style="margin-top: 10px">
-		<img id="projectGrid" src="5G_SHN_Pictures\5G_SHN_1.png" alt="5G Self-Healing Network Photo 1">
-		<p style="text-align: left;">
-			<strong> 5G Self-Healing Network Simulator</strong><br>
-			<i> Undergraduate Research: 2018 - 2020 </i>
-			<br><br>
-			This project aims to simulate a network comprised of current technologies in order to test various self-healing and network management strategies
-			in the hopes of implementing a digital network manager capable of detecting the “unhealthy/failing” cells present in a network to implement researched self-healing procedures.
-			The simulator will accurately model channel conditions and model downlink communications between cellular 
-			towers and User Equipment (cell phones, computers, etc.). The project centers around determining the optimal algorithms implemented at the management level 
-			for achieving this result using the constraints introduced by the environment and technologies simulated.
-			<br><br>
-			This project won <strong>best project</strong> within the Electrical and Computer Engineering department. A project overview video can be viewed
-			<strong><a href="https://www.youtube.com/watch?v=s30Yz3fSJMw&list=PLNV8XAzo8y_3RyNA_sNPMYtLZNhUcbWxa&index=42"> here. </a></strong>
-		</p>
+	<div id="divStyle2">
+		<h2 class="sectionTitle"> Featured Projects </h2>
+		<div class="grid-container" style="margin-top: 10px">
+			<img id="projectGrid" src="5G_SHN_Pictures\5G_SHN_1.png" alt="5G Self-Healing Network Photo 1">
+			<p style="text-align: left;">
+				<strong> 5G Self-Healing Network Simulator</strong><br>
+				<i> Undergraduate Research: 2018 - 2020 </i>
+				<br><br>
+				This project aims to simulate a network comprised of current technologies in order to test various self-healing and network management strategies
+				in the hopes of implementing a digital network manager capable of detecting the “unhealthy/failing” cells present in a network to implement researched self-healing procedures.
+				The simulator will accurately model channel conditions and model downlink communications between cellular 
+				towers and User Equipment (cell phones, computers, etc.). The project centers around determining the optimal algorithms implemented at the management level 
+				for achieving this result using the constraints introduced by the environment and technologies simulated.
+				<br><br>
+				In 2020, this project won <strong>best project</strong> within the Electrical and Computer Engineering department. A project overview video can be viewed
+				<strong><a href="https://www.youtube.com/watch?v=s30Yz3fSJMw&list=PLNV8XAzo8y_3RyNA_sNPMYtLZNhUcbWxa&index=42"> here. </a></strong>
+			</p>
+		</div>
+		
+		<div class="grid-container" id="divAltColor" style="margin-top: 10px">
+			<img id="projectGrid" src="DROWT_Pictures\DROWT_1.png" alt="DROWT Photo 1">
+			<p style="text-align: left;">
+				<strong> Decentralized Renewable Wastewater Treatment System (DROWT) </strong><br>
+				<i> Undergraduate Research: 2018 - 2019 </i>
+				<br><br>
+				This project presents the development of a mock control system for an automated, self-sustaining, decentralized water treatment plant. The system is composed of an Arduino microcontroller
+				MKR1000 and an array of sensors linked to a mobile application to monitor different aspects of the system. 
+				The application lets the end user monitor the entire system and grants access to the control of certain sensors. The system communicates with 
+				cloud based analytic software ThingSpeak to process and display system data on a mobile android application.
+				<br><br>
+				This project was presented at COMPSAC 2019 and published in an IEEE Peer-Reviewed journal.
+				<br>
+				<strong><i>To see the full publication: <a href="https://ieeexplore.ieee.org/document/8754287"> click here </a></i></strong>
+			</p>
+		</div>
+		
+		<br><hr> <!-- Line Break -->
+		
+		<p style="text-align: center;">
+			To view other projects I have worked on, please navigate to the <a href="https://ieeexplore.ieee.org/document/8754287"><strong> projects</strong></a> page to view my full portfolio on GitHub.
+		</p><br>
 	</div>
-	
-	<div class="grid-container" id="divAltColor" style="margin-top: 10px">
-		<img id="projectGrid" src="DROWT_Pictures\DROWT_1.png" alt="DROWT Photo 1">
-		<p style="text-align: left;">
-			<strong> Decentralized Renewable Wastewater Treatment System (DROWT) </strong><br>
-			<i> Undergraduate Research: 2018 - 2019 </i>
-			<br><br>
-			This project presents the development of a mock control system for an automated, self-sustaining, decentralized water treatment plant. The system is composed of an Arduino microcontroller
-			MKR1000 and an array of sensors linked to a mobile application to monitor different aspects of the system. 
-			The application lets the end user monitor the entire system and grants access to the control of certain sensors. The system communicates with 
-			cloud based analytic software ThingSpeak to process and display system data on a mobile android application.
-			<br><br>
-			This project was presented at COMPSAC 2019 and published in an IEEE Peer-Reviewed journal.
-			<br>
-			<strong><i>To see the full publication: <a href="https://ieeexplore.ieee.org/document/8754287"> click here </a></i></strong>
-		</p>
-	</div>
-	
-	<br><hr> <!-- Line Break -->
-	
-	<p style="text-align: center;">
-		To view other projects I have worked on, please navigate to the <a href="https://ieeexplore.ieee.org/document/8754287"><strong> projects</strong></a> page or use the link above
-		to view my full portfolio on GitHub.
-	</p><br>
-	
-	<h2 class="sectionTitle" style="font-size: 20px; font-weight: normal;"><i> Last Updated: April 2021 </i></h2>
 	
 </body>
 
