--- a/experience.html
+++ b/experience.html
@@ -42,7 +42,7 @@
 	<div id="divStyle2">
 		<h2 class="sectionTitle"> RPA Developer Intern: Niagara Bottling </h2>
 		
-		<div id="divAltColor" class="grid-container">
+		<div class="grid-container">
 			<img src="NiagaraInternship_2020_Images/AutomationAnywhere.jpg" alt="[ Missing Image ]">
 			<p>
 				Currently, I am a Robotic Process Automation (RPA) Developer intern for the continuous improvement team within the supply chain department at Niagara Bottling, LLC. 
@@ -71,8 +71,8 @@
 			the setup of Ignition Gateways as well as a User Management UI to manage accounts linked to the gateway remotely.
 		</p>
 
-		<div id="divAltColor" class="grid-container">
-			<img src="NiagaraInternship_2020_Images/YellowBelt.jpg" alt="[ Missing Image ]">
+		<div class="grid-container">
+			<img style="width:auto;height:auto;max-width:300px;" src="NiagaraInternship_2020_Images/YellowBelt.jpg" alt="[ Missing Image ]">
 			<p>
 				Outside of my projects I have had the opportunity to learn and apply continuous improvement strategies during both years of my internship with 
 				Niagara.
