Modified experience section layout

--- a/experience.html
+++ b/experience.html
@@ -61,19 +61,16 @@
 	<!-- Niagara Systems Engineering Experience Section -->
 	<div id="divStyle1">
 		<h2 class="sectionTitle"> Systems Engineering Intern: Niagara Bottling </h2>
-		
-		<p>
-			At Niagara Bottling I served as a Systems Engineering intern for the Digitalization team within Niagara Bottling, LLC. The main purpose of this role
-			is to utilize the Ignition Supervisory Control And Data Acquisition (SCADA) platform to visualize data collected from PLCs within the
-			plants throughout the company and create high performance, responsive Human Machine Interfaces (HMIs) to aid various departments within
-			the company.
-			During this past summer, I was given 2 primary projects to work on along with many day-to-day tasks. My primary projects include a User Interface (UI) to automate 
-			the setup of Ignition Gateways as well as a User Management UI to manage accounts linked to the gateway remotely.
-		</p>
 
 		<div class="grid-container">
-			<img style="width:auto;height:auto;max-width:300px;" src="NiagaraInternship_2020_Images/YellowBelt.jpg" alt="[ Missing Image ]">
 			<p>
+				At Niagara Bottling I served as a Systems Engineering intern for the Digitalization team within Niagara Bottling, LLC. The main purpose of this role
+				is to utilize the Ignition Supervisory Control And Data Acquisition (SCADA) platform to visualize data collected from PLCs within the
+				plants throughout the company and create high performance, responsive Human Machine Interfaces (HMIs) to aid various departments within
+				the company.
+				During this past summer, I was given 2 primary projects to work on along with many day-to-day tasks. My primary projects include a User Interface (UI) to automate 
+				the setup of Ignition Gateways as well as a User Management UI to manage accounts linked to the gateway remotely.
+				<br><br>
 				Outside of my projects I have had the opportunity to learn and apply continuous improvement strategies during both years of my internship with 
 				Niagara.
 				<br><br>
@@ -83,6 +80,7 @@
 				time that would go into tedious tasks. In particular, letting team managers control the access level of their employees within Ignition will 
 				significantly improve the workflow of Ignition-reliant teams within the company.
 			</p>
+			<img class="projectPictures" src="NiagaraInternship_2020_Images/YellowBelt.jpg" alt="[ Missing Image ]">
 		</div>
 	</div>
 	
