--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 	<!-- Featured Projects -->
 	<div id="divStyle2">
 		<h2 class="sectionTitle"> Featured Projects </h2>
-		<div class="grid-container" style="margin-top: 10px">
+		<div class="grid-container">
 			<img id="projectGrid" src="5G_SHN_Pictures\5G_SHN_1.png" alt="5G Self-Healing Network Photo 1">
 			<p style="text-align: left;">
 				<strong> 5G Self-Healing Network Simulator</strong><br>
@@ -68,9 +68,11 @@
 				<strong><a href="https://www.youtube.com/watch?v=s30Yz3fSJMw&list=PLNV8XAzo8y_3RyNA_sNPMYtLZNhUcbWxa&index=42"> here. </a></strong>
 			</p>
 		</div>
+	</div>
 		
-		<div class="grid-container" id="divAltColor" style="margin-top: 10px">
-			<img id="projectGrid" src="DROWT_Pictures\DROWT_1.png" alt="DROWT Photo 1">
+	<div id="divStyle1">
+		<div class="grid-container">
+			<img id="projectGrid" src="DROWT_Pictures\Icon_Prototype.png" alt="DROWT Photo 1">
 			<p style="text-align: left;">
 				<strong> Decentralized Renewable Wastewater Treatment System (DROWT) </strong><br>
 				<i> Undergraduate Research: 2018 - 2019 </i>
@@ -85,9 +87,9 @@
 				<strong><i>To see the full publication: <a href="https://ieeexplore.ieee.org/document/8754287"> click here </a></i></strong>
 			</p>
 		</div>
+	</div>	
 		
-		<br><hr> <!-- Line Break -->
-		
+	<div id="divStyle2">
 		<p style="text-align: center;">
 			To view other projects I have worked on, please navigate to the <a href="https://ieeexplore.ieee.org/document/8754287"><strong> projects</strong></a> page to view my full portfolio on GitHub.
 		</p><br>
