Added social media icons

--- a/index.html
+++ b/index.html
@@ -90,9 +90,11 @@
 	</div>	
 		
 	<div id="divStyle2">
-		<p style="text-align: center;">
-			To view other projects I have worked on, please navigate to the <a href="https://ieeexplore.ieee.org/document/8754287"><strong> projects</strong></a> page to view my full portfolio on GitHub.
-		</p><br>
+		<div class="threeColumn">
+			<a href="mailto:omarnaffaa.on@gmail.com" class="gridBtnItem" target="blank"><i class="far fa-envelope"></i></a>
+			<a href="https://github.com/OmarNaffaa" class="gridBtnItem"><i class="fab fa-github-square"></i></a>
+			<a href="https://www.linkedin.com/in/omnaffaa/" class="gridBtnItem"><i class="fab fa-linkedin"></i></a>
+		</div>
 	</div>
 	
 </body>
