--- a/experience.html
+++ b/experience.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="navbar.css">
 	
 	<!-- Icon Library Sheet -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<script src="https://kit.fontawesome.com/a076d05399.js"></script>
 	<!-- Google "Arsenal" and "Quicksand" Font -->
 	<link href='https://fonts.googleapis.com/css?family=Arsenal' rel='stylesheet'>
 	<link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet'>
@@ -107,6 +107,14 @@
 		<div id="divAltColor" class="grid-container">
 			<img src="NiagaraInternship_2019_Images/SelfCheckout_Homepage.png" alt="Homepage" style="width:100%;height:auto;">
 			<img src="NiagaraInternship_2019_Images/SelfCheckout_AdminPage.png" alt="Administrator Page" style="width:100%;height:auto;">
+		</div>
+	</div>
+	
+	<div id="divStyle1">
+		<div class="threeColumn">
+			<a href="mailto:omarnaffaa.on@gmail.com" class="gridBtnItem" target="blank"><i class="far fa-envelope"></i></a>
+			<a href="https://github.com/OmarNaffaa" class="gridBtnItem"><i class="fab fa-github-square"></i></a>
+			<a href="https://www.linkedin.com/in/omnaffaa/" class="gridBtnItem"><i class="fab fa-linkedin"></i></a>
 		</div>
 	</div>
 </body>
