--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
 			<p id="bannerTitle" style="color:#FFFFFF">
 				Experienced engineer with a demonstrated history of working on embedded systems and automation through 
 				academic research and industry experience. Skilled in C++, C#, Python, Internet of Things, and Java-based
-				Android app development. Currently, I automate processes for team members within the supply chain department 
-				at Niagara Bottling, LLC using Automation Anywhere and Excel VBA.
+				Android app development.
 			</p>
 		</div>
 	</div>
