Completed projects section

--- a/projects.html
+++ b/projects.html
@@ -40,117 +40,76 @@
 	<h1 class="pageTitle"> Projects </h1>
 	
 	<div class="column">
-		<a href="https://github.com/OmarNaffaa/">
-			<div class="card">
-				<p class="cardHeader"> 5G Self-Healing Simulator </p>
+		
+		<div class="card">
+			<p class="cardHeader"> 5G Self-Healing Simulator </p>
+			<a href="https://github.com/OmarNaffaa/">
 				<img id="cardImage" src="5G_SHN_Pictures\5G_SHN_1.png" alt="[ Missing Image ]">
-			</div>
-		</a>
+			</a>
+		</div>
 		
-		<a href="https://github.com/OmarNaffaa/">
-			<div class="card">
-				<p class="cardHeader"> DROWT </p>
+		<div class="card">
+			<p class="cardHeader"> DROWT </p>
+			<a href="https://github.com/OmarNaffaa/">
 				<img id="cardImage" src="DROWT_Pictures\Icon_Prototype.png" alt="[ Missing Image ]">
-			</div>
-		</a>
-		
-		<a href="https://github.com/OmarNaffaa/HomeMonitor">
-			<div class="card">
-				<p class="cardHeader"> HomeMonitor </p>
-				<img id="cardImage" src="HomeMonitor_Pictures\house.png" alt="[ Missing Image ]">
-			</div>
-		</a>
-		
-		<a href="https://github.com/OmarNaffaa/">
-			<div class="card">
-				<p class="cardHeader"> Music Station </p>
-				<img id="cardImage" src="" alt="[ Missing Image ]">
-			</div>
-		</a>
-		
-		<a href="https://github.com/OmarNaffaa/">
-			<div class="card">
-				<p class="cardHeader"> LED Chaser </p>
-				<img id="cardImage" src="" alt="[ Missing Image ]">
-			</div>
-		</a>
-		
-		<a href="https://github.com/OmarNaffaa/">
-			<div class="card">
-				<p class="cardHeader"> Frequency / Period Meter </p>
-				<img id="cardImage" src="FrequencyPeriodMeter/DigitalDisplay.png" alt="[ Missing Image ]">
-			</div>
-		</a>
-		
-		<a href="https://github.com/OmarNaffaa/">
-			<div class="card">
-				<p class="cardHeader"> FPGA Thermometer </p>
-				<img id="cardImage" src="" alt="[ Missing Image ]">
-			</div>
-		</a>
-		
-		<a href="https://github.com/OmarNaffaa/">
-			<div class="card">
-				<p class="cardHeader"> FPGA Tap Detection </p>
-				<img id="cardImage" src="" alt="[ Missing Image ]">
-			</div>
-		</a>
-		
-		<a href="https://github.com/OmarNaffaa/">
-			<div class="card">
-				<p class="cardHeader"> Rainbow Night Light</p>
-				<img id="cardImage" src="ECE4305_Projects\spectrumDiagram.png" alt="[ Missing Image ]">
-			</div>
-		</a>
-		
-		<a href="https://github.com/OmarNaffaa/">
-			<div class="card">
-				<p class="cardHeader"> Bisection Method </p>
-				<img id="cardImage" src="" alt="[ Missing Image ]">
-			</div>
-		</a>
-		
-		<a href="https://github.com/OmarNaffaa/">
-			<div class="card">
-				<p class="cardHeader"> Fixed-Point Iteration </p>
-				<img id="cardImage" src="" alt="[ Missing Image ]">
-			</div>
-		</a>
-		
-		<a href="https://github.com/OmarNaffaa/">
-			<div class="card">
-				<p class="cardHeader"> Numerical Integration </p>
-				<img id="cardImage" src="" alt="[ Missing Image ]">
-			</div>
-		</a>
-		
-		<a href="https://github.com/OmarNaffaa/">
-			<div class="card">
-				<p class="cardHeader"> Numerical Differentiation </p>
-				<img id="cardImage" src="" alt="[ Missing Image ]">
-			</div>
-		</a>
-		
-		<a href="https://github.com/OmarNaffaa/Newton-and-Lagrange-Interpolation">
-			<div class="card">
-				<p class="cardHeader"> Newton Interpolation </p>
-				<img id="cardImage" src="NumericalMethods_Pictures/NewtonInterpolation.png" alt="[ Missing Image ]">
-			</div>
-		</a>
-
-		<a href="https://github.com/OmarNaffaa/">
-			<div class="card">
-				<p class="cardHeader"> Gaussian Elimination </p>
-				<img id="cardImage" src="" alt="[ Missing Image ]">
-			</div>
-		</a>
+			</a>
+		</div>
 	
-		<a href="https://github.com/OmarNaffaa/LocationFinder">
-			<div class="card">
-				<p class="cardHeader"> Location Finder </p>
+		<div class="card">
+			<p class="cardHeader"> HomeMonitor </p>
+			<a href="https://github.com/OmarNaffaa/HomeMonitor">
+				<img id="cardImage" src="HomeMonitor_Pictures\house.png" alt="[ Missing Image ]">
+			</a>
+		</div>
+	
+		<div class="card">
+			<p class="cardHeader"> Numerical Methods </p>
+			<a href="https://github.com/OmarNaffaa/Numerical-Methods">
+				<img id="cardImage" src="NumericalMethods_Pictures/NewtonInterpolation.png" alt="[ Missing Image ]">
+			</a>
+		</div>
+	
+		<div class="card">
+			<p class="cardHeader"> Music Station </p>
+			<a href="https://github.com/OmarNaffaa/MusicStation">
+				<img id="cardImage" src="ECE4305_Projects\MusicStation.png" alt="[ Missing Image ]">
+			</a>
+		</div>
+	
+		<div class="card">
+			<p class="cardHeader"> Frequency / Period Meter </p>
+			<a href="https://github.com/OmarNaffaa/">
+				<img id="cardImage" src="FrequencyPeriodMeter/DigitalDisplay.png" alt="[ Missing Image ]">
+			</a>
+		</div>
+	
+		<div class="card">
+			<p class="cardHeader"> FPGA Thermometer </p>
+			<a href="https://github.com/OmarNaffaa/FPGA-SoC-Thermometer">
+				<img id="cardImage" src="ECE4305_Projects\FPGA_Thermometer.png" alt="[ Missing Image ]">
+			</a>
+		</div>
+	
+		<div class="card">
+			<p class="cardHeader"> Rainbow Night Light</p>
+			<a href="https://github.com/OmarNaffaa/Rainbow-Night-Light">
+				<img id="cardImage" src="ECE4305_Projects\spectrumDiagram.png" alt="[ Missing Image ]">
+			</a>
+		</div>
+		
+		<div class="card">
+			<p class="cardHeader"> Location Finder </p>
+			<a href="https://github.com/OmarNaffaa/LocationFinder">
 				<img id="cardImage" src="LocationFinder/LocationFinder_HomepagePicture.png" alt="[ Missing Image ]">
-			</div>
-		</a>
+			</a>
+		</div>
+		
+		<div class="card">
+			<p class="cardHeader"> STL Implementations (C++) </p>
+			<a href="https://github.com/OmarNaffaa/CPP-STL-Implementations">
+				<img id="cardImage" src="MiscImages\cpp_logo.png" alt="[ Missing Image ]">
+			</a>
+		</div>
 
 	</div>
 	
