Fixed image issue on projects page

--- a/projects.html
+++ b/projects.html
@@ -65,7 +65,7 @@
 		<div class="card">
 			<p class="cardHeader"> Numerical Methods </p>
 			<a href="https://github.com/OmarNaffaa/Numerical-Methods">
-				<img id="cardImage" src="NumericalMethods_Pictures/NewtonInterpolation.png" alt="[ Missing Image ]">
+				<img id="cardImage" src="NumericalMethods_Pictures/NewtonInterpolation.PNG" alt="[ Missing Image ]">
 			</a>
 		</div>
 	
