Added new project

--- a/projects.html
+++ b/projects.html
@@ -50,7 +50,7 @@
 		
 		<div class="card">
 			<p class="cardHeader"> DROWT </p>
-			<a href="https://github.com/OmarNaffaa/">
+			<a href="https://github.com/OmarNaffaa/TankControl">
 				<img id="cardImage" src="DROWT_Pictures\Icon_Prototype.png" alt="[ Missing Image ]">
 			</a>
 		</div>
@@ -101,6 +101,20 @@
 			<p class="cardHeader"> Location Finder </p>
 			<a href="https://github.com/OmarNaffaa/LocationFinder">
 				<img id="cardImage" src="LocationFinder/LocationFinder_HomepagePicture.png" alt="[ Missing Image ]">
+			</a>
+		</div>
+		
+		<div class="card">
+			<p class="cardHeader"> UDP Client/Server </p>
+			<a href="https://github.com/OmarNaffaa/UDP-Client-and-Server">
+				<img id="cardImage" src="MiscImages\UDP_Client_Server.png" alt="[ Missing Image ]">
+			</a>
+		</div>
+		
+		<div class="card">
+			<p class="cardHeader"> System Verilog </p>
+			<a href="https://github.com/OmarNaffaa/ECE4305_Coursework">
+				<img id="cardImage" src="MiscImages\fpga.png" alt="[ Missing Image ]">
 			</a>
 		</div>
 		
